[metadata]
name = physiofit_manager
version = attr: physiofit_manager.__version__
author = Loïc Le Grégam
author_email = legregam@insa-toulouse.fr
description = Manage PhysioFit input files
url = https://github.com/MetaboHUB-MetaToul-FluxoMet/PhysioFit_Data_Manager
project_urls =
    Bug Tracker = https://github.com/MetaboHUB-MetaToul-FluxoMet/PhysioFit_Data_Manager/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas >= 1.5.0

[options.entry_points]
console_scripts =
    physiofit_manager = physiofit_manager.cli:main
